hoan thanh - chua responsive web

--- a/product.html
+++ b/product.html
@@ -217,7 +217,7 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/Google-Pixel-3.png');"> </div>
-                                    <h4 class="list__category-item__name">Google Pixel 3 Quốc tế</h4>
+                                    <a href="" class="list__category-item__name">Google Pixel 3 Quốc tế</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">2.590.000</span>
                                         <span class="list__category-item__price-old">3.200.000</span>
@@ -255,7 +255,7 @@
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/Samsung_Galaxy_Note_10_5G.jpg');">
                                     </div>
-                                    <h4 class="list__category-item__name">Samsung Galaxy Note 10 5G (12GB|256GB)</h4>
+                                    <a href="" class="list__category-item__name">Samsung Galaxy Note 10 5G (12GB|256GB)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.500.000</span>
                                         <span class="list__category-item__price-old">5.000.000</span>
@@ -292,7 +292,7 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/iphone-14-pro.jpg');"> </div>
-                                    <h4 class="list__category-item__name">Điện thoại iPhone 14 Pro 128GB </h4>
+                                    <a href="" class="list__category-item__name">Điện thoại iPhone 14 Pro 128GB </a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">24.999.000</span>
                                         <span class="list__category-item__price-old">27.200.000</span>
@@ -329,8 +329,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/xiaomi-redmi-note-12.jpg');"> </div>
-                                    <h4 class="list__category-item__name">Điện thoại Xiaomi Redmi Note 12 - Hàng Chính
-                                        Hãng, mới 100%, Bảo hành 18 tháng</h4>
+                                    <a href="" class="list__category-item__name">Điện thoại Xiaomi Redmi Note 12 - Hàng Chính
+                                        Hãng, mới 100%, Bảo hành 18 tháng</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.170.000</span>
                                         <span class="list__category-item__price-old">4.990.000</span>
@@ -367,7 +367,7 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/xiaomi-poco-m5.jpg');"> </div>
-                                    <h4 class="list__category-item__name">Poco M5 Chính hãng Nguyên seal</h4>
+                                    <a href="" class="list__category-item__name">Poco M5 Chính hãng Nguyên seal</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">2.890.000</span>
                                         <span class="list__category-item__price-old">3.990.000</span>
@@ -406,7 +406,7 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/dongho.jpg');"> </div>
-                                    <h4 class="list__category-item__name">APPLE WATCH SE 2 44MM (NEW SEAL)</h4>
+                                    <a href="" class="list__category-item__name">APPLE WATCH SE 2 44MM (NEW SEAL)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">999.000</span>
                                         <span class="list__category-item__price-old">1.200.000</span>
@@ -443,8 +443,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/y68.jpg');"> </div>
-                                    <h4 class="list__category-item__name">Đồng hồ thông minh TWITCH Y68 D20S theo dõi
-                                        sức khỏe chất lượng cao)</h4>
+                                    <a href="" class="list__category-item__name">Đồng hồ thông minh TWITCH Y68 D20S theo dõi
+                                        sức khỏe chất lượng cao)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">75.537</span>
                                         <span class="list__category-item__price-old">125.895</span>
@@ -481,8 +481,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/GIW5.png');"> </div>
-                                    <h4 class="list__category-item__name">Đồng hồ thông minh WIFI nghe gọi SIM 3G 4G có
-                                        GPS Dual Camera - GIW5</h4>
+                                    <a href="" class="list__category-item__name">Đồng hồ thông minh WIFI nghe gọi SIM 3G 4G có
+                                        GPS Dual Camera - GIW5</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">1.560.000</span>
                                         <span class="list__category-item__price-old">2.200.000</span>
@@ -519,8 +519,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/Smartwatch.png');"> </div>
-                                    <h4 class="list__category-item__name">Đồng Hồ Thông Minh Smartwatch Mới Iwo Đồng Hồ
-                                        Thông Minh D18 Chống Nước</h4>
+                                    <a href="" class="list__category-item__name">Đồng Hồ Thông Minh Smartwatch Mới Iwo Đồng Hồ
+                                        Thông Minh D18 Chống Nước</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">321.300</span>
                                         <span class="list__category-item__price-old">357.000</span>
@@ -557,8 +557,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/band6.png');"> </div>
-                                    <h4 class="list__category-item__name">Đồng Hồ Đeo Tay Thông MInh Nhỏ Gọn, Đa Năng
-                                        Xiaomi Mi Band 6</h4>
+                                    <a href="" class="list__category-item__name">Đồng Hồ Đeo Tay Thông MInh Nhỏ Gọn, Đa Năng
+                                        Xiaomi Mi Band 6</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">868.000</span>
                                         <span class="list__category-item__price-old">978.000</span>
@@ -597,8 +597,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/vsp.png');"> </div>
-                                    <h4 class="list__category-item__name">Bộ máy tính để bàn Cấu hình cao ( Core i7 /
-                                        2600/ Ram 8Gb / SSD 240GB ) và Màn hình VSP 22 inch</h4>
+                                    <a href="" class="list__category-item__name">Bộ máy tính để bàn Cấu hình cao ( Core i7 /
+                                        2600/ Ram 8Gb / SSD 240GB ) và Màn hình VSP 22 inch</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.560.000</span>
                                         <span class="list__category-item__price-old">4.750.000</span>
@@ -635,8 +635,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/gtx.png');"> </div>
-                                    <h4 class="list__category-item__name">MAX PC GAMING X7 CPU Core i7-2600 Ram 4GB SSD
-                                        128GB GTX 750TI</h4>
+                                    <a href="" class="list__category-item__name">MAX PC GAMING X7 CPU Core i7-2600 Ram 4GB SSD
+                                        128GB GTX 750TI</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">5.180.000</span>
                                         <span class="list__category-item__price-old">6.200.000</span>
@@ -673,8 +673,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/dell.png');"> </div>
-                                    <h4 class="list__category-item__name">BỘ Máy Tính Đồng Bộ Dell CORE I5-4570/RAM 8GB
-                                        /SSD 120GB/HDD 500GB và Màn hình Dell 21.5 inch</h4>
+                                    <a href="" class="list__category-item__name">BỘ Máy Tính Đồng Bộ Dell CORE I5-4570/RAM 8GB
+                                        /SSD 120GB/HDD 500GB và Màn hình Dell 21.5 inch</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.464.000</span>
                                         <span class="list__category-item__price-old">4.650.000</span>
@@ -711,8 +711,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/vlimited.png');"> </div>
-                                    <h4 class="list__category-item__name">Bộ máy tính để bàn Vlimited chơi game trọn độ
-                                        đầy đủ Case/8G/SSD/HDD/Vga rời/Màn hình</h4>
+                                    <a href="" class="list__category-item__name">Bộ máy tính để bàn Vlimited chơi game trọn độ
+                                        đầy đủ Case/8G/SSD/HDD/Vga rời/Màn hình</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.990.000</span>
                                         <span class="list__category-item__price-old">5.200.000</span>
@@ -749,8 +749,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/case.png');"> </div>
-                                    <h4 class="list__category-item__name">Case máy tính để bàn chơi game MAX PC CPU core
-                                        i5 10400F, Ram 16GB,SSD M2 128GB, HDD 500GB Card 1050TI+</h4>
+                                    <a href="" class="list__category-item__name">Case máy tính để bàn chơi game MAX PC CPU core
+                                        i5 10400F, Ram 16GB,SSD M2 128GB, HDD 500GB Card 1050TI+</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">14.088.000</span>
                                         <span class="list__category-item__price-old">15.200.000</span>
@@ -789,8 +789,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/inspiron.png');"> </div>
-                                    <h4 class="list__category-item__name">Laptop Laptop Dell Inspiron 16 5620 i7
-                                        1260P/16GB/512GB/2GB MX570/OfficeHS/Win11 (N6I7000W1)</h4>
+                                    <a href="" class="list__category-item__name">Laptop Laptop Dell Inspiron 16 5620 i7
+                                        1260P/16GB/512GB/2GB MX570/OfficeHS/Win11 (N6I7000W1)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">14.286.000</span>
                                         <span class="list__category-item__price-old">
@@ -828,8 +828,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/lenovo.png');"> </div>
-                                    <h4 class="list__category-item__name">aptop Lenovo ThinkBook 14s Yoga ITL i5
-                                        1135G7/16GB/512GB/14"F/Touch/Pen/Win11/(20WE007NVN)</h4>
+                                    <a href="" class="list__category-item__name">aptop Lenovo ThinkBook 14s Yoga ITL i5
+                                        1135G7/16GB/512GB/14"F/Touch/Pen/Win11/(20WE007NVN)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">18.681.000</span>
                                         <span class="list__category-item__price-old">22.417.200</span>
@@ -866,9 +866,9 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/msi.png');"> </div>
-                                    <h4 class="list__category-item__name">Laptop MSI Modern 15 B5M-023VN
+                                    <a href="" class="list__category-item__name">Laptop MSI Modern 15 B5M-023VN
                                         (R5-5625U/8GB/512GB SSD/AMD Radeon Graphics/ 15.6" Full HD/ Windows
-                                        11/Black/Nhôm)</h4>
+                                        11/Black/Nhôm)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">11.990.000</span>
                                         <span class="list__category-item__price-old">12.200.000</span>
@@ -905,8 +905,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/vostro.png');"> </div>
-                                    <h4 class="list__category-item__name">Laptop Dell Vostro 3405 (V4R53500U003W) (R5
-                                        3500U 8GB RAM/512GB SSD/14.0 inch FHD/Win10/Đen)</h4>
+                                    <a href="" class="list__category-item__name">Laptop Dell Vostro 3405 (V4R53500U003W) (R5
+                                        3500U 8GB RAM/512GB SSD/14.0 inch FHD/Win10/Đen)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">3.047.000</span>
                                         <span class="list__category-item__price-old">3.656.400</span>
@@ -943,8 +943,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/gia_do.png');"> </div>
-                                    <h4 class="list__category-item__name">Giá đỡ laptop nhôm có thể gấp gọn dành cho
-                                        Macbook Ipad Surface và máy tính xách tay</h4>
+                                    <a href="" class="list__category-item__name">Giá đỡ laptop nhôm có thể gấp gọn dành cho
+                                        Macbook Ipad Surface và máy tính xách tay</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">179.000 </span>
                                         <span class="list__category-item__price-old">249.000</span>
